Fixes some code wrapping issues

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -164,10 +164,15 @@ pre {
   font-size: .8rem;
   line-height: 1.4;
   white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
   background-color: #f9f9f9;
+  overflow: scroll;
+}
+.code-title {
+  background-color: #202020;
+  color: #fff;
+  padding: 2px 10px;
+  font-style: italic;
+  font-size: .8rem;
 }
 pre code {
   padding: 0;
